[package]
name = "rustic_base"
version = "0.1.0"
edition = "2021"
description = "Pico 2 W captive-portal WiFi network selector (RP2350 + CYW43)"

[dependencies]
# Async embedded framework + RP2350 HAL.
embassy-executor = { version = "0.10", features = [
    "platform-cortex-m",
    "executor-thread",
    "executor-interrupt",
] }
embassy-time = { version = "0.5" }
embassy-rp = { version = "0.10", features = [
    "rp235xa",        # Pico 2 / Pico 2 W use the RP2350A
    "time-driver",
    "critical-section-impl",
    "binary-info",    # enables the embassy_rp::binary_info module (picotool metadata)
] }

# The onboard LED is wired to the CYW43 wireless chip, not an RP2350 GPIO,
# so we must drive the CYW43 to toggle it.
cyw43 = { version = "0.7" }
cyw43-pio = { version = "0.10" }

# TCP/IP stack. cyw43 0.7 exposes an embassy-net Ethernet-medium driver; the
# matching embassy-net is 0.9 (released in the same batch as cyw43 0.7).
#   - proto-ipv4 + medium-ethernet: required by the cyw43 driver.
#   - tcp: the HTTP captive-portal server (port 80).
#   - udp: our hand-rolled DHCP server (port 67) and DNS catch-all (port 53).
#   - dhcpv4: the *client* used once we switch to STA mode to get an upstream lease.
#   - dns: the resolver used to confirm internet reachability after joining.
embassy-net = { version = "0.9", features = [
    "proto-ipv4",
    "medium-ethernet",
    "tcp",
    "udp",
    "dhcpv4",
    "dns",
] }

embassy-futures = "0.1"
embassy-sync = "0.8"
static_cell = "2.1"
portable-atomic = { version = "1.13", features = ["critical-section"] }
heapless = "0.9"
embedded-io-async = "0.7"
# RoscRng implements rand_core 0.9's RngCore (matches embassy-rp 0.10).
rand_core = "0.9"

# Cortex-M runtime + panic handling.
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
panic-halt = "1.0"

[profile.release]
opt-level = "s"     # optimize for size (firmware lives in limited flash)
lto = true          # link-time optimization
debug = 2           # keep debug info in the ELF (stripped from the UF2)
codegen-units = 1
overflow-checks = true

[profile.dev]
opt-level = 1       # opt-level 0 is often too slow/large for embedded
debug = 2
